<?xml version="1.0" encoding="utf-8"?>
<TableRow
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/table_row"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/clickable_row">
        <TextView
            android:id="@+id/row_title"
            android:layout_width="@dimen/title_col_width"
            android:layout_height="match_parent"
            android:padding="@dimen/table_data_padding_LR"
            android:text="@string/placeholder_title"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="@dimen/table_data_font_size" />

        <TextView
            android:id="@+id/row_latitude"
            android:layout_width="@dimen/latlon_col_width"
            android:layout_height="match_parent"
            android:padding="@dimen/table_data_padding_LR"
            android:text="@string/placeholder_latitude"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="@dimen/table_data_font_size" />

        <TextView
            android:id="@+id/row_longitude"
            android:layout_width="@dimen/latlon_col_width"
            android:layout_height="match_parent"
            android:padding="@dimen/table_data_padding_LR"
            android:text="@string/placeholder_longitude"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="@dimen/table_data_font_size" />

        <TextView
            android:id="@+id/row_time"
            android:layout_width="@dimen/time_col_width"
            android:layout_height="match_parent"
            android:padding="@dimen/table_data_padding_LR"
            android:text="@string/placeholder_time"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="@dimen/table_data_font_size" />
    </LinearLayout>

</TableRow>

