<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.captechventures.techchallenge2.display_earthquake.DisplayEarthquakesActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/activity_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heading"
        android:textAlignment="center"
        android:textSize="20sp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/table_layout"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="7dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="gone"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="0dp"
        >

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/spinner_size"
            android:layout_height="@dimen/spinner_size"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/progressBar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textAlignment="center"
            tools:text="55%" />

    </RelativeLayout>


    <TableLayout android:id="@+id/table_layout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TableRow
            android:id="@+id/table_headings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:id="@+id/checkbox_placeholder"
                android:layout_width="@dimen/checkbox_width"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/table_heading_1"
                android:layout_width="@dimen/title_col_width"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/table_heading_padding"
                android:paddingRight="@dimen/table_heading_padding"
                android:text="@string/table_heading_1"
                android:textAlignment="center"
                android:textSize="@dimen/table_heading_font_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/table_heading_2"
                android:layout_width="@dimen/latlon_col_width"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/table_heading_padding"
                android:paddingRight="@dimen/table_heading_padding"
                android:text="@string/table_heading_2"
                android:textAlignment="center"
                android:textSize="@dimen/table_heading_font_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/table_heading_3"
                android:layout_width="@dimen/latlon_col_width"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/table_heading_padding"
                android:paddingRight="@dimen/table_heading_padding"
                android:text="@string/table_heading_3"
                android:textAlignment="center"
                android:textSize="@dimen/table_heading_font_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/table_heading_4"
                android:layout_width="@dimen/time_col_width"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/table_heading_padding"
                android:paddingRight="@dimen/table_heading_padding"
                android:text="@string/table_heading_4"
                android:textAlignment="center"
                android:textSize="@dimen/table_heading_font_size"
                android:textStyle="bold" />

        </TableRow>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:visibility="gone"
            tools:listitem="@layout/item_earthquake" />

    </TableLayout>

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/button_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0">

        <Button
            android:id="@+id/button_unselect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_unselect"
            android:enabled="false"
            android:textSize="@dimen/button_font_size" />

        <Button
            android:id="@+id/button_load_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/table_layout"
            android:layout_weight="1"
            android:text="@string/button_load_data"
            android:textSize="@dimen/button_font_size" />

        <Button
            android:id="@+id/button_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:text="@string/button_del"
            android:enabled="false"
            android:textSize="@dimen/button_font_size" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
